--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection" : "Data Source=reactivities.db"
-  }
+  },
+  "TokenKey": "this is my custom Secret key for authentication and it is not 512 bytes"
 }
